Allow comments after flow-style values

--- a/hrc/test/source/yaml/misc7.yaml
+++ b/hrc/test/source/yaml/misc7.yaml
@@ -60,3 +60,11 @@
   bla: [{key: val} error here]
   bla: ["foo" error here]
   bla: ['foo' error here]
+
+  bla: ['foo'] # comment here
+    # comment here
+    error here
+  bla: {foo: bar} #comment here
+    # comment here
+    error here
+
